# folderbrowser

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.rst  pylintrc  pyproject.toml  setup.cfg
folderbrowser/: __init__.py  __main__.py  server.py
folderserver/: __init__.py  __main__.py  legacy.py
folderserver/test/: test_server.py
test/: test_server.py
test/fixtures/: file1000.txt
tests/: test_server.py
