[tool.poetry]
name = "folderbrowser"
version = "0.1.4"
description = "Lightweight webserver to browse folder and its contents on a webbrowser"
authors = ["Wouter Batelaan <wbjrpub@gmail.com>"]
keywords = ["folder", "directory", "webserver"]
#documentation = https://...
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/wbjrpub/folderbrowser"
repository = "https://github.com/wbjrpub/folderbrowser"
include = ['poetry.lock']
packages = [
    { include = "folderbrowser" },
]
# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-incremental = "^0.5.0"
pytest-runner = "^5.2"
pytest-watch = "^4.2"
twine = "^3.0"
wheel = "^0.34.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
